--- a/Quick-Notes/package.json
+++ b/Quick-Notes/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^3.3.8",
-    "axios": "^1.6.7",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.2",
-    "framer-motion": "^11.0.5",
+    "framer-motion": "^11.18.2",
     "jspdf": "^2.5.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.1",
     "react-toastify": "^11.0.3"
   },
